--- a/Lori learns web programming.html
+++ b/Lori learns web programming.html
@@ -17,9 +17,9 @@
  I kinda hate when things don't work out ASAP. <br>
  <img src="https://media.tenor.com/mrhSuWoRzV0AAAAC/mad-cat.gif" alt="grumpy cat" width=120 height=80>
 </p>
-
+<button>hi</button>
 <button style="border:dotted;font-family:comic sans;background-color:lightblue;font-size:big"
-onclick="alert('Remember you are loved')">Need a cheering-up?</button>
+onclick="alert('Remember you are loved')">Need cheering-up?</button>
 </main>
 
 <footer> Whether you found my journey to be inspiring, are struggling with mental illness yourself or need advice for someone close or whether you just like to reach out, feel free to <a href="http://page doesn't exist yet.com">contact me</a>. If you're seeking help or need advice on how to help someone with severe mental disorder, <a href="https://www.psycom.net/get-help-mental-health">this website</a> is a good place to start. </footer>
